fix: layout problems

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,11 @@
         overflow: auto;
         display: flex;
         align-items: center;
+
+        & > div,
+        & > section {
+            width: 100%;
+        }
     }
 
     .swiper-button-prev {
