--- a/src/pages/PostPage.scss
+++ b/src/pages/PostPage.scss
@@ -22,7 +22,7 @@
 
     img {
         display: block;
-        margin: 32px 0;
+        margin: 32px auto;
         max-width: 100%;
         max-height: 400px;
         object-fit: cover;
